# snipgen

./: .gitignore  README.md  build_docs.py  generate_sop.py  pyproject.toml  render.yaml  requirements.txt
api/: index.py
snipgen/: __init__.py  cli.py  pipeline.py
snipgen/analysis/: base_editor.py  cloning_primers.py  isoform_analyzer.py
snipgen/filters/: base_filter.py  deduplicator.py  filter_chain.py  gc_filter.py  gnomad_filter.py  offtarget_filter.py  pam_filter.py
snipgen/io/: fasta_reader.py  output_writer.py
snipgen/models/: grna_candidate.py
snipgen/preprocessing/: sequence_cleaner.py  window_extractor.py
snipgen/scoring/: clinvar_annotator.py  composite_scorer.py  confidence_scorer.py  consequence_scorer.py  llm_recommendation.py  ml_scorer.py  offtarget_scorer.py  ontarget_scorer.py  recommendation.py  rule_scorer.py  train_ontarget_model.py  train_ontarget_real.py  validate_consequence_scorer.py
snipgen/scoring/models/: ontarget_xgb.pkl  ontarget_xgb_metrics.json
snipgen/utils/: logger.py  nucleotide.py
tests/: test_cli.py  test_fasta_reader.py  test_gc_filter.py  test_ml_scorer.py  test_offtarget_filter.py  test_pam_filter.py  test_pipeline.py  test_rule_scorer.py
tests/fixtures/: sample_target.fasta
validation_data/: consequence_validation_results.tsv
webapp/: app.py  crispor_client.py  job_queue.py
webapp/static/: index.html
